[Cocoa] setCookie API fails to set session cookies for defaultDataStore if processPool created but not used https://bugs.webkit.org/show_bug.cgi?id=188209

Reviewed by Geoffrey Garen.

Source/WebKit:

If defaultDataStore is already created when launching network process, it means user
probably set cookies for default session via API, so we should update m_websiteDataStore to
make sure pendingCookies is passed to network process.

* UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::ensureNetworkProcess):

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/WKHTTPCookieStore.mm:
(TEST):


Canonical link: https://commits.webkit.org/203384@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234517 268f45cc-cd09-0410-ab3c-d52691b4dbfc